load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "agent.go",
        "miner.go",
        "remote_agent.go",
        "unconfirmed.go",
        "worker.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/miner",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts:go_default_library",
        "//common:go_default_library",
        "//consensus:go_default_library",
        "//consensus/ethash:go_default_library",
        "//consensus/misc:go_default_library",
        "//core:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//eth/downloader:go_default_library",
        "//ethdb:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "//params:go_default_library",
        "//vendor/gopkg.in/fatih/set.v0:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["unconfirmed_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//core/types:go_default_library",
    ],
)
