load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "miner.go",
        "unconfirmed.go",
        "worker.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/miner",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//common/hexutil:go_default_library",
        "//consensus:go_default_library",
        "//consensus/misc:go_default_library",
        "//core:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//eth/downloader:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "//params:go_default_library",
        "//trie:go_default_library",
        "@com_github_deckarep_golang_set//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "miner_test.go",
        "unconfirmed_test.go",
        "worker_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//accounts:go_default_library",
        "//common:go_default_library",
        "//consensus:go_default_library",
        "//consensus/clique:go_default_library",
        "//consensus/ethash:go_default_library",
        "//core:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//crypto:go_default_library",
        "//eth/downloader:go_default_library",
        "//ethdb:go_default_library",
        "//ethdb/memorydb:go_default_library",
        "//event:go_default_library",
        "//params:go_default_library",
        "//trie:go_default_library",
    ],
)
