load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "accounts.go",
        "big.go",
        "bind.go",
        "common.go",
        "context.go",
        "discover.go",
        "doc.go",
        "ethclient.go",
        "ethereum.go",
        "geth.go",
        "geth_android.go",
        "geth_other.go",
        "init.go",
        "interface.go",
        "logger.go",
        "p2p.go",
        "params.go",
        "primitives.go",
        "types.go",
        "vm.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/mobile",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//accounts:go_default_library",
        "//accounts/abi:go_default_library",
        "//accounts/abi/bind:go_default_library",
        "//accounts/keystore:go_default_library",
        "//common:go_default_library",
        "//core:go_default_library",
        "//core/types:go_default_library",
        "//crypto:go_default_library",
        "//eth:go_default_library",
        "//eth/downloader:go_default_library",
        "//ethclient:go_default_library",
        "//ethstats:go_default_library",
        "//internal/debug:go_default_library",
        "//les:go_default_library",
        "//log:go_default_library",
        "//node:go_default_library",
        "//p2p:go_default_library",
        "//p2p/discv5:go_default_library",
        "//p2p/nat:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
        "//whisper/whisperv6:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["android_test.go"],
    embed = [":go_default_library"],
    deps = ["//internal/build:go_default_library"],
)
