load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dial.go",
        "message.go",
        "metrics.go",
        "peer.go",
        "peer_error.go",
        "protocol.go",
        "server.go",
        "transport.go",
        "util.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/p2p",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//common/bitutil:go_default_library",
        "//common/mclock:go_default_library",
        "//crypto:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "//metrics:go_default_library",
        "//p2p/discover:go_default_library",
        "//p2p/enode:go_default_library",
        "//p2p/enr:go_default_library",
        "//p2p/nat:go_default_library",
        "//p2p/netutil:go_default_library",
        "//p2p/rlpx:go_default_library",
        "//rlp:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "dial_test.go",
        "message_test.go",
        "peer_test.go",
        "server_test.go",
        "transport_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common/mclock:go_default_library",
        "//crypto:go_default_library",
        "//internal/testlog:go_default_library",
        "//log:go_default_library",
        "//p2p/enode:go_default_library",
        "//p2p/enr:go_default_library",
        "//p2p/netutil:go_default_library",
        "//p2p/rlpx:go_default_library",
        "//p2p/simulations/pipes:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
    ],
)
