load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bootnodes.go",
        "config.go",
        "dao.go",
        "denomination.go",
        "gas_table.go",
        "network_params.go",
        "protocol_params.go",
        "version.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/params",
    visibility = ["//visibility:public"],
    deps = ["//common:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
)
