load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "decode.go",
        "doc.go",
        "encode.go",
        "raw.go",
        "typecache.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/rlp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "decode_tail_test.go",
        "decode_test.go",
        "encode_test.go",
        "encoder_example_test.go",
        "raw_test.go",
    ],
    embed = [":go_default_library"],
)
