load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "doc.go",
        "endpoints.go",
        "errors.go",
        "http.go",
        "inproc.go",
        "ipc.go",
        "ipc_unix.go",
        "ipc_windows.go",
        "json.go",
        "server.go",
        "subscription.go",
        "types.go",
        "utils.go",
        "websocket.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//common/hexutil:go_default_library",
        "//log:go_default_library",
        "//p2p/netutil:go_default_library",
        "//vendor/github.com/rs/cors:go_default_library",
        "//vendor/golang.org/x/net/websocket:go_default_library",
        "//vendor/gopkg.in/fatih/set.v0:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:windows": [
            "//vendor/gopkg.in/natefinch/npipe.v2:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_example_test.go",
        "client_test.go",
        "http_test.go",
        "json_test.go",
        "server_test.go",
        "subscription_test.go",
        "types_test.go",
        "utils_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common/math:go_default_library",
        "//log:go_default_library",
        "//vendor/github.com/davecgh/go-spew/spew:go_default_library",
    ],
)
