load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "constants_unix.go",
        "constants_unix_nocgo.go",
        "doc.go",
        "endpoints.go",
        "errors.go",
        "gzip.go",
        "handler.go",
        "http.go",
        "inproc.go",
        "ipc.go",
        "ipc_unix.go",
        "ipc_windows.go",
        "json.go",
        "server.go",
        "service.go",
        "stdio.go",
        "subscription.go",
        "types.go",
        "websocket.go",
    ],
    cgo = True,
    importpath = "github.com/ethereum/go-ethereum/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//common/hexutil:go_default_library",
        "//log:go_default_library",
        "//p2p/netutil:go_default_library",
        "//vendor/github.com/gorilla/websocket:go_default_library",
        "@com_github_deckarep_golang_set//:go_default_library",
        "@com_github_rs_cors//:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:windows": [
            "@in_gopkg_natefinch_npipe_v2//:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_example_test.go",
        "client_test.go",
        "http_test.go",
        "server_test.go",
        "subscription_test.go",
        "testservice_test.go",
        "types_test.go",
        "websocket_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//common/math:go_default_library",
        "//log:go_default_library",
        "//vendor/github.com/gorilla/websocket:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
    ],
)
