load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "state.go",
        "swarm.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/swarm",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts/abi/bind:go_default_library",
        "//common:go_default_library",
        "//contracts/chequebook:go_default_library",
        "//contracts/ens:go_default_library",
        "//ethclient:go_default_library",
        "//metrics:go_default_library",
        "//p2p:go_default_library",
        "//p2p/discover:go_default_library",
        "//p2p/protocols:go_default_library",
        "//params:go_default_library",
        "//rpc:go_default_library",
        "//swarm/api:go_default_library",
        "//swarm/api/http:go_default_library",
        "//swarm/fuse:go_default_library",
        "//swarm/log:go_default_library",
        "//swarm/network:go_default_library",
        "//swarm/network/stream:go_default_library",
        "//swarm/pss:go_default_library",
        "//swarm/state:go_default_library",
        "//swarm/storage:go_default_library",
        "//swarm/storage/mock:go_default_library",
        "//swarm/storage/mru:go_default_library",
        "//swarm/tracing:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "network_test.go",
        "swarm_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//crypto:go_default_library",
        "//log:go_default_library",
        "//node:go_default_library",
        "//p2p/discover:go_default_library",
        "//p2p/simulations/adapters:go_default_library",
        "//rpc:go_default_library",
        "//swarm/api:go_default_library",
        "//swarm/network:go_default_library",
        "//swarm/network/simulation:go_default_library",
        "//swarm/storage:go_default_library",
        "//vendor/github.com/mattn/go-colorable:go_default_library",
    ],
)
