load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "block_test_util.go",
        "difficulty_test_util.go",
        "gen_btheader.go",
        "gen_difficultytest.go",
        "gen_stenv.go",
        "gen_sttransaction.go",
        "gen_tttransaction.go",
        "gen_vmexec.go",
        "init.go",
        "rlp_test_util.go",
        "state_test_util.go",
        "transaction_test_util.go",
        "vm_test_util.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/tests",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//common/hexutil:go_default_library",
        "//common/math:go_default_library",
        "//consensus/ethash:go_default_library",
        "//core:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//crypto:go_default_library",
        "//crypto/sha3:go_default_library",
        "//ethdb:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "block_test.go",
        "difficulty_test.go",
        "init_test.go",
        "rlp_test.go",
        "state_test.go",
        "transaction_test.go",
        "vm_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//core/vm:go_default_library",
        "//params:go_default_library",
    ],
)
