load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "database.go",
        "encoding.go",
        "errors.go",
        "hasher.go",
        "iterator.go",
        "node.go",
        "proof.go",
        "secure_trie.go",
        "sync.go",
        "trie.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/trie",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//crypto:go_default_library",
        "//crypto/sha3:go_default_library",
        "//ethdb:go_default_library",
        "//log:go_default_library",
        "//metrics:go_default_library",
        "//rlp:go_default_library",
        "//vendor/gopkg.in/karalabe/cookiejar.v2/collections/prque:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "encoding_test.go",
        "iterator_test.go",
        "node_test.go",
        "proof_test.go",
        "secure_trie_test.go",
        "sync_test.go",
        "trie_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//crypto:go_default_library",
        "//ethdb:go_default_library",
        "//rlp:go_default_library",
        "//vendor/github.com/davecgh/go-spew/spew:go_default_library",
    ],
)
