load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "abi.go",
        "argument.go",
        "doc.go",
        "error.go",
        "event.go",
        "method.go",
        "pack.go",
        "reflect.go",
        "topics.go",
        "type.go",
        "unpack.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/accounts/abi",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//common/math:go_default_library",
        "//crypto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "abi_test.go",
        "event_test.go",
        "method_test.go",
        "pack_test.go",
        "packing_test.go",
        "reflect_test.go",
        "topics_test.go",
        "type_test.go",
        "unpack_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//common/math:go_default_library",
        "//crypto:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
