load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "account_cache.go",
        "file_cache.go",
        "key.go",
        "keystore.go",
        "passphrase.go",
        "plain.go",
        "presale.go",
        "wallet.go",
        "watch_fallback.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/accounts/keystore",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//accounts:go_default_library",
        "//common:go_default_library",
        "//common/math:go_default_library",
        "//core/types:go_default_library",
        "//crypto:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "@com_github_deckarep_golang_set//:go_default_library",
        "@com_github_pborman_uuid//:go_default_library",
        "@org_golang_x_crypto//pbkdf2:go_default_library",
        "@org_golang_x_crypto//scrypt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "account_cache_test.go",
        "keystore_test.go",
        "passphrase_test.go",
        "plain_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//accounts:go_default_library",
        "//common:go_default_library",
        "//crypto:go_default_library",
        "//event:go_default_library",
        "@com_github_cespare_cp//:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
    ],
)
