load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "account_cache.go",
        "file_cache.go",
        "key.go",
        "keystore.go",
        "passphrase.go",
        "plain.go",
        "presale.go",
        "wallet.go",
        "watch.go",
        "watch_fallback.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/accounts/keystore",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//accounts:go_default_library",
        "//common:go_default_library",
        "//common/math:go_default_library",
        "//core/types:go_default_library",
        "//crypto:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "@com_github_deckarep_golang_set//:go_default_library",
        "@com_github_pborman_uuid//:go_default_library",
        "@org_golang_x_crypto//pbkdf2:go_default_library",
        "@org_golang_x_crypto//scrypt:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:android_386": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_amd64": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_arm": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_386": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_386": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_amd64": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_arm": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_386": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64le": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mipsle": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64le": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_386": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_amd64": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_arm": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris_amd64": [
            "@com_github_rjeczalik_notify//:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "account_cache_test.go",
        "keystore_test.go",
        "passphrase_test.go",
        "plain_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//accounts:go_default_library",
        "//common:go_default_library",
        "//crypto:go_default_library",
        "//event:go_default_library",
        "@com_github_cespare_cp//:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
    ],
)
