load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "apdu.go",
        "hub.go",
        "securechannel.go",
        "wallet.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/accounts/scwallet",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//accounts:go_default_library",
        "//common:go_default_library",
        "//core/types:go_default_library",
        "//crypto:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "//vendor/github.com/gballet/go-libpcsclite:go_default_library",
        "//vendor/github.com/status-im/keycard-go/derivationpath:go_default_library",
        "//vendor/github.com/wsddn/go-ecdh:go_default_library",
        "//vendor/golang.org/x/text/unicode/norm:go_default_library",
        "@org_golang_x_crypto//pbkdf2:go_default_library",
    ],
)
