load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "hub.go",
        "ledger.go",
        "trezor.go",
        "wallet.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/accounts/usbwallet",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//accounts:go_default_library",
        "//accounts/usbwallet/trezor:go_default_library",
        "//common:go_default_library",
        "//common/hexutil:go_default_library",
        "//core/types:go_default_library",
        "//crypto:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "//rlp:go_default_library",
        "//vendor/github.com/karalabe/usb:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
